fixing broken links & update

--- a/yinyang_bugs.html
+++ b/yinyang_bugs.html
@@ -1,66 +1,66 @@
 <h2>Bug findings with Semantic Fusion</h2>
 
 <h2>CVC4</h2>
-<a href="https://github.com/CVC4/CVC4/issues/4333">https://github.com/CVC4/CVC4/issues/4333</a> Confirmed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3441">https://github.com/CVC4/CVC4/issues/3441</a> Dup <br />
-<a href="https://github.com/CVC4/CVC4/issues/3440">https://github.com/CVC4/CVC4/issues/3440</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3430">https://github.com/CVC4/CVC4/issues/3430</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3412">https://github.com/CVC4/CVC4/issues/3412</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3375">https://github.com/CVC4/CVC4/issues/3375</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3357">https://github.com/CVC4/CVC4/issues/3357</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3286">https://github.com/CVC4/CVC4/issues/3286</a> Confirmed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3272">https://github.com/CVC4/CVC4/issues/3272</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3247">https://github.com/CVC4/CVC4/issues/3247</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3217">https://github.com/CVC4/CVC4/issues/3217</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3203">https://github.com/CVC4/CVC4/issues/3203</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3106">https://github.com/CVC4/CVC4/issues/3106</a> Confirmed <br />
+<a href="//github.com/CVC4/CVC4/issues/4333">//github.com/CVC4/CVC4/issues/4333</a> Confirmed <br />
+<a href="//github.com/CVC4/CVC4/issues/3441">//github.com/CVC4/CVC4/issues/3441</a> Dup <br />
+<a href="//github.com/CVC4/CVC4/issues/3440">//github.com/CVC4/CVC4/issues/3440</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3430">//github.com/CVC4/CVC4/issues/3430</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3412">//github.com/CVC4/CVC4/issues/3412</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3375">//github.com/CVC4/CVC4/issues/3375</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3357">//github.com/CVC4/CVC4/issues/3357</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3286">//github.com/CVC4/CVC4/issues/3286</a> Confirmed <br />
+<a href="//github.com/CVC4/CVC4/issues/3272">//github.com/CVC4/CVC4/issues/3272</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3247">//github.com/CVC4/CVC4/issues/3247</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3217">//github.com/CVC4/CVC4/issues/3217</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3203">//github.com/CVC4/CVC4/issues/3203</a> Fixed <br />
+<a href="//github.com/CVC4/CVC4/issues/3106">//github.com/CVC4/CVC4/issues/3106</a> Confirmed <br />
 
 <h2>Z3</h2>
-<a href="https://github.com/Z3Prover/z3/issues/4532">https://github.com/Z3Prover/z3/issues/4532</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990">https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686">https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4518#issue-638850637">https://github.com/Z3Prover/z3/issues/4518#issue-638850637</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4153">https://github.com/Z3Prover/z3/issues/4153</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/3926">https://github.com/Z3Prover/z3/issues/3926</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/3072">https://github.com/Z3Prover/z3/issues/3072</a> Confirmed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2924">https://github.com/Z3Prover/z3/issues/2924</a> Dup <br />
-<a href="https://github.com/Z3Prover/z3/issues/2673">https://github.com/Z3Prover/z3/issues/2673</a> Confirmed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2672">https://github.com/Z3Prover/z3/issues/2672</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2671">https://github.com/Z3Prover/z3/issues/2671</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2668">https://github.com/Z3Prover/z3/issues/2668</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2632">https://github.com/Z3Prover/z3/issues/2632</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2618">https://github.com/Z3Prover/z3/issues/2618</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2615">https://github.com/Z3Prover/z3/issues/2615</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2613">https://github.com/Z3Prover/z3/issues/2613</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2612">https://github.com/Z3Prover/z3/issues/2612</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2580">https://github.com/Z3Prover/z3/issues/2580</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2578">https://github.com/Z3Prover/z3/issues/2578</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2573">https://github.com/Z3Prover/z3/issues/2573</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2567">https://github.com/Z3Prover/z3/issues/2567</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2566">https://github.com/Z3Prover/z3/issues/2566</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2563">https://github.com/Z3Prover/z3/issues/2563</a> Confirmed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2562">https://github.com/Z3Prover/z3/issues/2562</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2557">https://github.com/Z3Prover/z3/issues/2557</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2556">https://github.com/Z3Prover/z3/issues/2556</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2548">https://github.com/Z3Prover/z3/issues/2548</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2546">https://github.com/Z3Prover/z3/issues/2546</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2533">https://github.com/Z3Prover/z3/issues/2533</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2531">https://github.com/Z3Prover/z3/issues/2531</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2530">https://github.com/Z3Prover/z3/issues/2530</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2516">https://github.com/Z3Prover/z3/issues/2516</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2514">https://github.com/Z3Prover/z3/issues/2514</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2513">https://github.com/Z3Prover/z3/issues/2513</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2509">https://github.com/Z3Prover/z3/issues/2509</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2483">https://github.com/Z3Prover/z3/issues/2483</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2478">https://github.com/Z3Prover/z3/issues/2478</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2450">https://github.com/Z3Prover/z3/issues/2450</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2449">https://github.com/Z3Prover/z3/issues/2449</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2422">https://github.com/Z3Prover/z3/issues/2422</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2396">https://github.com/Z3Prover/z3/issues/2396</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2397">https://github.com/Z3Prover/z3/issues/2397</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2391">https://github.com/Z3Prover/z3/issues/2391</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2390">https://github.com/Z3Prover/z3/issues/2390</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2376">https://github.com/Z3Prover/z3/issues/2376</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2375">https://github.com/Z3Prover/z3/issues/2375</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2372">https://github.com/Z3Prover/z3/issues/2372</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2366">https://github.com/Z3Prover/z3/issues/2366</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/4532">//github.com/Z3Prover/z3/issues/4532</a> Reported <br />
+<a href="//github.com/Z3Prover/z3/issues/4532#issuecomment-648048990">//github.com/Z3Prover/z3/issues/4532#issuecomment-648048990</a> Reported <br />
+<a href="//github.com/Z3Prover/z3/issues/4532#issuecomment-646721686">//github.com/Z3Prover/z3/issues/4532#issuecomment-646721686</a> Reported <br />
+<a href="//github.com/Z3Prover/z3/issues/4518#issue-638850637">//github.com/Z3Prover/z3/issues/4518#issue-638850637</a> Reported <br />
+<a href="//github.com/Z3Prover/z3/issues/4153">//github.com/Z3Prover/z3/issues/4153</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/3926">//github.com/Z3Prover/z3/issues/3926</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/3072">//github.com/Z3Prover/z3/issues/3072</a> Confirmed <br />
+<a href="//github.com/Z3Prover/z3/issues/2924">//github.com/Z3Prover/z3/issues/2924</a> Dup <br />
+<a href="//github.com/Z3Prover/z3/issues/2673">//github.com/Z3Prover/z3/issues/2673</a> Confirmed <br />
+<a href="//github.com/Z3Prover/z3/issues/2672">//github.com/Z3Prover/z3/issues/2672</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2671">//github.com/Z3Prover/z3/issues/2671</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2668">//github.com/Z3Prover/z3/issues/2668</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2632">//github.com/Z3Prover/z3/issues/2632</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2618">//github.com/Z3Prover/z3/issues/2618</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2615">//github.com/Z3Prover/z3/issues/2615</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2613">//github.com/Z3Prover/z3/issues/2613</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2612">//github.com/Z3Prover/z3/issues/2612</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2580">//github.com/Z3Prover/z3/issues/2580</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2578">//github.com/Z3Prover/z3/issues/2578</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2573">//github.com/Z3Prover/z3/issues/2573</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2567">//github.com/Z3Prover/z3/issues/2567</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2566">//github.com/Z3Prover/z3/issues/2566</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2563">//github.com/Z3Prover/z3/issues/2563</a> Confirmed <br />
+<a href="//github.com/Z3Prover/z3/issues/2562">//github.com/Z3Prover/z3/issues/2562</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2557">//github.com/Z3Prover/z3/issues/2557</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2556">//github.com/Z3Prover/z3/issues/2556</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2548">//github.com/Z3Prover/z3/issues/2548</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2546">//github.com/Z3Prover/z3/issues/2546</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2533">//github.com/Z3Prover/z3/issues/2533</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2531">//github.com/Z3Prover/z3/issues/2531</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2530">//github.com/Z3Prover/z3/issues/2530</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2516">//github.com/Z3Prover/z3/issues/2516</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2514">//github.com/Z3Prover/z3/issues/2514</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2513">//github.com/Z3Prover/z3/issues/2513</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2509">//github.com/Z3Prover/z3/issues/2509</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2483">//github.com/Z3Prover/z3/issues/2483</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2478">//github.com/Z3Prover/z3/issues/2478</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2450">//github.com/Z3Prover/z3/issues/2450</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2449">//github.com/Z3Prover/z3/issues/2449</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2422">//github.com/Z3Prover/z3/issues/2422</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2396">//github.com/Z3Prover/z3/issues/2396</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2397">//github.com/Z3Prover/z3/issues/2397</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2391">//github.com/Z3Prover/z3/issues/2391</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2390">//github.com/Z3Prover/z3/issues/2390</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2376">//github.com/Z3Prover/z3/issues/2376</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2375">//github.com/Z3Prover/z3/issues/2375</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2372">//github.com/Z3Prover/z3/issues/2372</a> Fixed <br />
+<a href="//github.com/Z3Prover/z3/issues/2366">//github.com/Z3Prover/z3/issues/2366</a> Fixed <br />
