--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ communities:
   Type-aware Operator Mutation (<a href="opfuzz_bugs.html">link</a>)
 </p>
 
-<p><b>Yin-Yang Tool Release</b>: <a href="https://github.com/testsmt/yinyang">https://github.com/testsmt/yinyang</a></p>
+<p><b>Yin-Yang Tool Release</b>: <a href="https://github.com/testsmt/yinyang">https://github.com/testsmt/yinyang</a> <img class="" src="./img/new.gif" alt="" /></p>
 
 Please follow us on
 Twitter <a href="https://twitter.com/testsmtsolvers">@testsmt</a> for
