--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ communities:
   Type-aware Operator Mutation (<a href="opfuzz_bugs.html">link</a>)
 </p>
 
-<p><b>Yin-Yang Tool Release</b>: <a href="https://github.com/testsmt/yinyang">https://github.com/testsmt/yinyang</a> <img class="" src="./img/new.gif" alt="" /></p>
+<p><img class="" src="./img/new.png" alt="" width="50pt" /> <b>Yin-Yang Tool Release</b>: <a href="https://github.com/testsmt/yinyang">https://github.com/testsmt/yinyang</a></p>
 
 Please follow us on
 Twitter <a href="https://twitter.com/testsmtsolvers">@testsmt</a> for
@@ -100,7 +100,7 @@ In <a href="https://conf.researchr.org/home/pldi-2020"><I>Proceedings of PLDI 20
 <div style="font-size:10pt;margin-bottom:-10pt "><sup>*</sup>
   Both authors contributed equally to this work.
 </div>
-  <br><font color="red">PLDI Distinguished Paper Award</font> <br><br>
+  <br> &nbsp; <img class="" src="./img/award.png" alt="" width="20pt"/> &nbsp; <font color="red">PLDI Distinguished Paper Award</font> <br><br>
 
   [2] <a href="https://arxiv.org/pdf/2004.08799.pdf"><B>On the Unusual Effectiveness of Type-aware Operator Mutations for Testing SMT Solvers</B></a>. 
 <br> 
