update: slides, video abstract, talk video OOPSLA paper

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@ In <a href="https://conf.researchr.org/home/pldi-2020"><I>Proceedings of PLDI 20
 </div>
   <br> &nbsp; <img class="" src="./img/award.png" alt="" width="20pt"/> &nbsp; <font color="red">PLDI Distinguished Paper Award</font> <br><br>
 
-  [2] <a href="https://arxiv.org/pdf/2004.08799.pdf"><B>On the Unusual Effectiveness of Type-aware Operator Mutations for Testing SMT Solvers</B></a>. 
+  [2] <a href="https://arxiv.org/pdf/2004.08799.pdf"><B>On the Unusual Effectiveness of Type-aware Operator Mutations for Testing SMT Solvers</B></a>. <br /> [<a href="https://testsmt.github.io/slides/oopsla20-type-aware-op-mutation.pdf">slides</a> | 
+  <a href="https://www.youtube.com/watch?v=uCEN3AnBYC0&feature=emb_title">video abstract</a> | 
+<a href="https://www.youtube.com/watch?v=sbQX2SnCKHA">talk video</a>] 
 <br> 
 Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br>
 In <a href="https://2020.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2020</I></a>, November 2020.
