--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ In <a href="https://conf.researchr.org/home/pldi-2020"><I>Proceedings of PLDI 20
 </div>
   <br> &nbsp; <img class="" src="./img/award.png" alt="" width="20pt"/> &nbsp; <font color="red">PLDI Distinguished Paper Award</font> <br><br>
 
-  [2] <a href="https://arxiv.org/pdf/2004.08799.pdf"><B>On the Unusual Effectiveness of Type-aware Operator Mutations for Testing SMT Solvers</B></a>. <br /> [<a href="https://testsmt.github.io/slides/oopsla20-type-aware-op-mutation.pdf">slides</a> | 
+  [2] <a href="https://dl.acm.org/doi/abs/10.1145/3428261"><B>On the Unusual Effectiveness of Type-aware Operator Mutations for Testing SMT Solvers</B></a>. <br /> [<a href="https://testsmt.github.io/slides/oopsla20-type-aware-op-mutation.pdf">slides</a> | 
   <a href="https://www.youtube.com/watch?v=uCEN3AnBYC0&feature=emb_title">video abstract</a> | 
 <a href="https://www.youtube.com/watch?v=sbQX2SnCKHA">talk video</a>] 
 <br> 
