--- a/yinyang_bugs.html
+++ b/yinyang_bugs.html
@@ -1,6 +1,7 @@
 <h2>Bug findings with Semantic Fusion</h2>
 
 <h2>CVC4</h2>
+<a href="https://github.com/CVC4/CVC4/issues/5482">https://github.com/CVC4/CVC4/issues/5482</a> Reported <br />
 <a href="https://github.com/CVC4/CVC4/issues/4333">https://github.com/CVC4/CVC4/issues/4333</a> Confirmed <br />
 <a href="https://github.com/CVC4/CVC4/issues/3441">https://github.com/CVC4/CVC4/issues/3441</a> Dup <br />
 <a href="https://github.com/CVC4/CVC4/issues/3440">https://github.com/CVC4/CVC4/issues/3440</a> Fixed <br />
@@ -16,6 +17,12 @@
 <a href="https://github.com/CVC4/CVC4/issues/3106">https://github.com/CVC4/CVC4/issues/3106</a> Confirmed <br />
 
 <h2>Z3</h2>
+<a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-764465183">https://github.com/Z3Prover/z3/issues/4866#issuecomment-764465183</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367">https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-759984367">https://github.com/Z3Prover/z3/issues/4866#issuecomment-759984367</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-759171224">https://github.com/Z3Prover/z3/issues/4940#issuecomment-759171224</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532">https://github.com/Z3Prover/z3/issues/4532</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990">https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686">https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686</a> Reported <br />
