update & new favicon

--- a/yinyang_bugs.html
+++ b/yinyang_bugs.html
@@ -1,7 +1,7 @@
 <h2>Bug findings with Semantic Fusion</h2>
 
 <h2>CVC4</h2>
-<a href="https://github.com/CVC4/CVC4/issues/5482">https://github.com/CVC4/CVC4/issues/5482</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/5482">https://github.com/CVC4/CVC4/issues/5482</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/4333">https://github.com/CVC4/CVC4/issues/4333</a> Confirmed <br />
 <a href="https://github.com/CVC4/CVC4/issues/3441">https://github.com/CVC4/CVC4/issues/3441</a> Dup <br />
 <a href="https://github.com/CVC4/CVC4/issues/3440">https://github.com/CVC4/CVC4/issues/3440</a> Fixed <br />
@@ -9,7 +9,7 @@
 <a href="https://github.com/CVC4/CVC4/issues/3412">https://github.com/CVC4/CVC4/issues/3412</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/3375">https://github.com/CVC4/CVC4/issues/3375</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/3357">https://github.com/CVC4/CVC4/issues/3357</a> Fixed <br />
-<a href="https://github.com/CVC4/CVC4/issues/3286">https://github.com/CVC4/CVC4/issues/3286</a> Confirmed <br />
+<a href="https://github.com/CVC4/CVC4/issues/3286">https://github.com/CVC4/CVC4/issues/3286</a> Won't fix <br />
 <a href="https://github.com/CVC4/CVC4/issues/3272">https://github.com/CVC4/CVC4/issues/3272</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/3247">https://github.com/CVC4/CVC4/issues/3247</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/3217">https://github.com/CVC4/CVC4/issues/3217</a> Fixed <br />
@@ -18,18 +18,18 @@
 
 <h2>Z3</h2>
 <a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-764465183">https://github.com/Z3Prover/z3/issues/4866#issuecomment-764465183</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367">https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-759984367">https://github.com/Z3Prover/z3/issues/4866#issuecomment-759984367</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367">https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-759984367">https://github.com/Z3Prover/z3/issues/4866#issuecomment-759984367</a> Confirmed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-759171224">https://github.com/Z3Prover/z3/issues/4940#issuecomment-759171224</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532">https://github.com/Z3Prover/z3/issues/4532</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990">https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686">https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4518#issue-638850637">https://github.com/Z3Prover/z3/issues/4518#issue-638850637</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4518#issue-638850637">https://github.com/Z3Prover/z3/issues/4518#issue-638850637</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4153">https://github.com/Z3Prover/z3/issues/4153</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/3926">https://github.com/Z3Prover/z3/issues/3926</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/3072">https://github.com/Z3Prover/z3/issues/3072</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/3072">https://github.com/Z3Prover/z3/issues/3072</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2924">https://github.com/Z3Prover/z3/issues/2924</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/2673">https://github.com/Z3Prover/z3/issues/2673</a> Confirmed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2672">https://github.com/Z3Prover/z3/issues/2672</a> Fixed <br />
@@ -45,7 +45,7 @@
 <a href="https://github.com/Z3Prover/z3/issues/2573">https://github.com/Z3Prover/z3/issues/2573</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2567">https://github.com/Z3Prover/z3/issues/2567</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2566">https://github.com/Z3Prover/z3/issues/2566</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2563">https://github.com/Z3Prover/z3/issues/2563</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/2563">https://github.com/Z3Prover/z3/issues/2563</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/2562">https://github.com/Z3Prover/z3/issues/2562</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2557">https://github.com/Z3Prover/z3/issues/2557</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2556">https://github.com/Z3Prover/z3/issues/2556</a> Fixed <br />
