--- a/index.html
+++ b/index.html
@@ -52,20 +52,21 @@ communities:
 
 <p>
 
-<p>[Summary: <b>1306</b> (total) / <b>805</b> (fixed)]<br>
-<p>[Z3 bugs: <b>957</b> (total) / <b>591</b> (fixed)]<br>
-[CVC4 bugs: <b>349</b> (total) / <b>214</b> (fixed)]<br>
-<p>[Bugs in default mode (Z3): <b>611</b> (total) / <b>403</b> (fixed)]<br>
-[Bugs in default mode (CVC4): <b>168</b> (total) / <b>111</b> (fixed)]<br>
-<p>[Soundness bugs (Z3): <b>297</b> (total) / <b>161</b> (fixed)]<br>
-[Soundness bugs (CVC4): <b>46</b> (total) / <b>37</b> (fixed)]<br>
+<p>[Summary: <b>1490</b> (total) / <b>989</b> (fixed)]<br>
+<p>[Z3 bugs: <b>1079</b> (total) / <b>709</b> (fixed)]<br>
+[CVC4 bugs: <b>411</b> (total) / <b>280</b> (fixed)]<br>
+<p>[Bugs in default mode (Z3): <b>658</b> (total) / <b>449</b> (fixed)]<br>
+[Bugs in default mode (CVC4): <b>203</b> (total) / <b>145</b> (fixed)]<br>
+<p>[Soundness bugs (Z3): <b>346</b> (total) / <b>206</b> (fixed)]<br>
+[Soundness bugs (CVC4): <b>70</b> (total) / <b>57</b> (fixed)]<br>
 
-<p>Report links:
-  Semantic Fusion (<a href="yinyang_bugs.html">link</a>),
-  Type-aware Operator Mutation (<a href="opfuzz_bugs.html">link</a>)
+<p>
+Semantic Fusion (<a href="yinyang_bugs.html">report links</a>) <br>
+Type-aware Operator Mutation (<a href="opfuzz_bugs.html">report links</a>) <br>
+Generative Type-aware Mutation (<a href="typefuzz_bugs.html">report links</a>)
 </p>
 
-<p><img class="" src="./img/new.png" alt="" width="50pt" /> <b>Yin-Yang Tool Release</b>: <a href="https://github.com/testsmt/yinyang">https://github.com/testsmt/yinyang</a></p>
+<p><img class="" src="./img/tool_logo.png" alt="" width="25pt" style="margin-bottom:-8px; margin-right:5px"/> <b>yinyang Tool</b>: <a href="https://github.com/testsmt/yinyang">https://github.com/testsmt/yinyang</a></p>
 
 Please follow us on
 Twitter <a href="https://twitter.com/testsmtsolvers">@testsmt</a> for
@@ -76,6 +77,9 @@ bugs in Z3 and CVC4.
 <a href="https://people.inf.ethz.ch/suz">Zhendong Su</a> <br>
 <a href="https://wintered.github.io/">Dominik Winterer</a> <br>
 <a href="http://chengyuzhang.com">Chengyu Zhang</a> <br>
+<a href="https://www.linkedin.com/in/jiwon-park-473998170/?originalSubdomain=fr">Jiwon Park</a> <br>
+
+
 
 <h3>Publications</h3>
 
@@ -99,6 +103,12 @@ Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br>
 In <a href="https://2020.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2020</I></a>, November 2020.
 </br>
 <div style="font-size:10pt;margin-bottom:-10pt"><sup>*</sup> Both authors contributed equally to this work. </div>
+</br>
+</br>
+ [3] <a href=""><B>Generative Type-Aware Mutation for Testing SMT Solvers.</B></a><br /> 
+Jiwon Park, Dominik Winterer, Chengyu Zhang and Zhendong Su</br>
+In <a href="https://2021.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2021</I></a>, Chicago, USA, October 2021 (conditionally accepted).</br>
+
 
 </font>
 
@@ -106,6 +116,6 @@ In <a href="https://2020.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2020</I
 
 <br><br><br><br>
 
-<tt>last modified: 2020.11.03</tt>
+<tt>last modified: 2021.07.15</tt>
 </body>
 </html>
