--- a/typefuzz_bugs.html
+++ b/typefuzz_bugs.html
@@ -3,16 +3,31 @@
 <h2>========= CVC4 =========</h2>
 <h2>Soundness Bugs</h2>
 <h4>Refutation Soundness</h4>
+<a href="https://github.com/cvc5/cvc5/issues/6776">https://github.com/cvc5/cvc5/issues/6776</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6681">https://github.com/cvc5/cvc5/issues/6681</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6654">https://github.com/cvc5/cvc5/issues/6654</a> Confirmed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6520">https://github.com/cvc5/cvc5/issues/6520</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6483">https://github.com/cvc5/cvc5/issues/6483</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/6142">https://github.com/CVC4/CVC4/issues/6142</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/6191">https://github.com/CVC4/CVC4/issues/6191</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/5940">https://github.com/CVC4/CVC4/issues/5940</a> Fixed <br />
 
 <h4>Solution Soundness</h4>
+<a href="https://github.com/cvc5/cvc5/issues/6604#issuecomment-847241234">https://github.com/cvc5/cvc5/issues/6604#issuecomment-847241234</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6604#issue-898823692">https://github.com/cvc5/cvc5/issues/6604#issue-898823692</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6639#issue-906870227">https://github.com/cvc5/cvc5/issues/6639#issue-906870227</a> Confirmed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6637#issuecomment-852452585">https://github.com/cvc5/cvc5/issues/6637#issuecomment-852452585</a> Dup <br />
+<a href="https://github.com/cvc5/cvc5/issues/6637#issue-906523476">https://github.com/cvc5/cvc5/issues/6637#issue-906523476</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6636">https://github.com/cvc5/cvc5/issues/6636</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6635">https://github.com/cvc5/cvc5/issues/6635</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6622">https://github.com/cvc5/cvc5/issues/6622</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6567">https://github.com/cvc5/cvc5/issues/6567</a> Fixed <br />
+<a href="https://github.com/cvc5/cvc5/issues/6560">https://github.com/cvc5/cvc5/issues/6560</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/6214#issuecomment-813495575">https://github.com/CVC4/CVC4/issues/6214#issuecomment-813495575</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/6214#issuecomment-813495575">https://github.com/CVC4/CVC4/issues/6214#issuecomment-813495575</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/6214#issuecomment-812857277">https://github.com/CVC4/CVC4/issues/6214#issuecomment-812857277</a> Dup <br />
 <a href="https://github.com/CVC4/CVC4/issues/6214">https://github.com/CVC4/CVC4/issues/6214</a> Fixed <br />
-<a href="[CVC4/CVC4#6101](https://github.com/CVC4/CVC4/issues/6101)">[CVC4/CVC4#6101](https://github.com/CVC4/CVC4/issues/6101)</a> Confirmed <br />
+<a href="https://github.com/CVC4/CVC4/issues/6101">https://github.com/CVC4/CVC4/issues/6101</a> Confirmed <br />
 <a href="https://github.com/CVC4/CVC4/issues/6075">https://github.com/CVC4/CVC4/issues/6075</a> Fixed <br />
 <a href="[CVC4/CVC4#5915](https://github.com/CVC4/CVC4/issues/5915)">[CVC4/CVC4#5915](https://github.com/CVC4/CVC4/issues/5915)</a> Fixed <br />
 <h2>Others</h2>
@@ -54,6 +69,21 @@
 <h2>========= Z3 =========</h2>
 <h2>Soundness Bugs</h2>
 <h4>Refutation Soundness</h4>
+<a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-873588682">https://github.com/Z3Prover/z3/issues/5140#issuecomment-873588682</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-868855897">https://github.com/Z3Prover/z3/issues/5140#issuecomment-868855897</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-880092673">https://github.com/Z3Prover/z3/issues/2650#issuecomment-880092673</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/5301">https://github.com/Z3Prover/z3/issues/5301</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-860191020">https://github.com/Z3Prover/z3/issues/2650#issuecomment-860191020</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5324#">https://github.com/Z3Prover/z3/issues/5324#</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5324#">https://github.com/Z3Prover/z3/issues/5324#</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5324#issuecomment-852907754">https://github.com/Z3Prover/z3/issues/5324#issuecomment-852907754</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5324#issuecomment-852440597">https://github.com/Z3Prover/z3/issues/5324#issuecomment-852440597</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5324#issue-908251210">https://github.com/Z3Prover/z3/issues/5324#issue-908251210</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5329">https://github.com/Z3Prover/z3/issues/5329</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5223">https://github.com/Z3Prover/z3/issues/5223</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5223#issuecomment-828600799">https://github.com/Z3Prover/z3/issues/5223#issuecomment-828600799</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5223#issuecomment-828599679">https://github.com/Z3Prover/z3/issues/5223#issuecomment-828599679</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5223#issuecomment-828598613">https://github.com/Z3Prover/z3/issues/5223#issuecomment-828598613</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5161">https://github.com/Z3Prover/z3/issues/5161</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/5042#issuecomment-812978896">https://github.com/Z3Prover/z3/issues/5042#issuecomment-812978896</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/5042#issuecomment-812848711">https://github.com/Z3Prover/z3/issues/5042#issuecomment-812848711</a> Dup <br />
@@ -74,6 +104,11 @@
 <a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-767074891">https://github.com/Z3Prover/z3/issues/4940#issuecomment-767074891</a> Fixed <br />
 
 <h4>Solution Soundness</h4>
+<a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-868853515">https://github.com/Z3Prover/z3/issues/5140#issuecomment-868853515</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-863925613">https://github.com/Z3Prover/z3/issues/5140#issuecomment-863925613</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/5324#issuecomment-852984716">https://github.com/Z3Prover/z3/issues/5324#issuecomment-852984716</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5324#issuecomment-852095144">https://github.com/Z3Prover/z3/issues/5324#issuecomment-852095144</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5161">https://github.com/Z3Prover/z3/issues/5161</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/5111">https://github.com/Z3Prover/z3/issues/5111</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5096">https://github.com/Z3Prover/z3/issues/5096</a> Fixed <br />
 <a href="[Z3Prover/Z3#5074](https://github.com/Z3Prover/z3/issues/5074)">[Z3Prover/Z3#5074](https://github.com/Z3Prover/z3/issues/5074)</a> Fixed <br />
@@ -84,6 +119,7 @@
 <a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-864401805">https://github.com/Z3Prover/z3/issues/5140#issuecomment-864401805</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-864395349">https://github.com/Z3Prover/z3/issues/5140#issuecomment-864395349</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5237">https://github.com/Z3Prover/z3/issues/5237</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/5244">https://github.com/Z3Prover/z3/issues/5244</a> Won't fix <br />
 <a href="https://github.com/Z3Prover/z3/issues/5296">https://github.com/Z3Prover/z3/issues/5296</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-858409317">https://github.com/Z3Prover/z3/issues/5140#issuecomment-858409317</a> Confirmed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5238">https://github.com/Z3Prover/z3/issues/5238</a> Fixed <br />
@@ -146,4 +182,3 @@
 <a href="https://github.com/Z3Prover/z3/issues/5047">https://github.com/Z3Prover/z3/issues/5047</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5035">https://github.com/Z3Prover/z3/issues/5035</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-767075970">https://github.com/Z3Prover/z3/issues/4940#issuecomment-767075970</a> Fixed <br />
-
