--- a/yinyang_bugs.html
+++ b/yinyang_bugs.html
@@ -1,7 +1,7 @@
 <h2>Bug findings with Semantic Fusion</h2>
 
-<h2>CVC4</h2>
-<a href="https://github.com/CVC4/CVC4/issues/5482">https://github.com/CVC4/CVC4/issues/5482</a> Fixed <br />
+<h2>========= CVC4 =========</h2>
+<a href="https://github.com/CVC4/CVC4/issues/4758#issuecomment-782028728">https://github.com/CVC4/CVC4/issues/4758#issuecomment-782028728</a> Confirmed <br />
 <a href="https://github.com/CVC4/CVC4/issues/4333">https://github.com/CVC4/CVC4/issues/4333</a> Confirmed <br />
 <a href="https://github.com/CVC4/CVC4/issues/3441">https://github.com/CVC4/CVC4/issues/3441</a> Dup <br />
 <a href="https://github.com/CVC4/CVC4/issues/3440">https://github.com/CVC4/CVC4/issues/3440</a> Fixed <br />
@@ -16,20 +16,28 @@
 <a href="https://github.com/CVC4/CVC4/issues/3203">https://github.com/CVC4/CVC4/issues/3203</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/3106">https://github.com/CVC4/CVC4/issues/3106</a> Confirmed <br />
 
-<h2>Z3</h2>
-<a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-764465183">https://github.com/Z3Prover/z3/issues/4866#issuecomment-764465183</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367">https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367</a> Confirmed <br />
-<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059</a> Confirmed <br />
-<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625</a> Confirmed <br />
+<h2>========= Z3 =========</h2>
+<a href="https://github.com/Z3Prover/z3/issues/5036#issuecomment-787601706">https://github.com/Z3Prover/z3/issues/5036#issuecomment-787601706</a> Dup <br />
+<a href="https://github.com/Z3Prover/z3/issues/4804#issuecomment-782707242">https://github.com/Z3Prover/z3/issues/4804#issuecomment-782707242</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/5036">https://github.com/Z3Prover/z3/issues/5036</a> Dup <br />
+<a href="https://github.com/Z3Prover/z3/issues/5029">https://github.com/Z3Prover/z3/issues/5029</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-778775322">https://github.com/Z3Prover/z3/issues/4866#issuecomment-778775322</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-778721073">https://github.com/Z3Prover/z3/issues/4866#issuecomment-778721073</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4613">https://github.com/Z3Prover/z3/issues/4613</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-764465183">https://github.com/Z3Prover/z3/issues/4866#issuecomment-764465183</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367">https://github.com/Z3Prover/z3/issues/4940#issuecomment-761021367</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760607059</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625">https://github.com/Z3Prover/z3/issues/4940#issuecomment-760305625</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4866#issuecomment-759984367">https://github.com/Z3Prover/z3/issues/4866#issuecomment-759984367</a> Confirmed <br />
-<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-759171224">https://github.com/Z3Prover/z3/issues/4940#issuecomment-759171224</a> Reported <br />
-<a href="https://github.com/Z3Prover/z3/issues/4532">https://github.com/Z3Prover/z3/issues/4532</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-759171224">https://github.com/Z3Prover/z3/issues/4940#issuecomment-759171224</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532">https://github.com/Z3Prover/z3/issues/4532</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990">https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686">https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4518#issue-638850637">https://github.com/Z3Prover/z3/issues/4518#issue-638850637</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4153">https://github.com/Z3Prover/z3/issues/4153</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/3926">https://github.com/Z3Prover/z3/issues/3926</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/3072">https://github.com/Z3Prover/z3/issues/3072</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/2926">https://github.com/Z3Prover/z3/issues/2926</a> Won't fix <br />
 <a href="https://github.com/Z3Prover/z3/issues/2924">https://github.com/Z3Prover/z3/issues/2924</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/2673">https://github.com/Z3Prover/z3/issues/2673</a> Confirmed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2672">https://github.com/Z3Prover/z3/issues/2672</a> Fixed <br />
@@ -44,7 +52,7 @@
 <a href="https://github.com/Z3Prover/z3/issues/2578">https://github.com/Z3Prover/z3/issues/2578</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2573">https://github.com/Z3Prover/z3/issues/2573</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2567">https://github.com/Z3Prover/z3/issues/2567</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2566">https://github.com/Z3Prover/z3/issues/2566</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/2566">https://github.com/Z3Prover/z3/issues/2566</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/2563">https://github.com/Z3Prover/z3/issues/2563</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/2562">https://github.com/Z3Prover/z3/issues/2562</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2557">https://github.com/Z3Prover/z3/issues/2557</a> Fixed <br />
